--- a/src/Components/Nav/Nav.css
+++ b/src/Components/Nav/Nav.css
@@ -42,7 +42,7 @@
 @media screen and (max-width: 767px){  
     .nav-container {
         position: fixed;
-        bottom: 0;
+        bottom: 15px;
         background-color: rgba(255, 255, 255, 0.6);
         box-shadow: 0 -1px 12px hsla(174, 12%, 15%, 0.15);
         width: 10rem;
