--- a/src/Components/User/User.css
+++ b/src/Components/User/User.css
@@ -23,6 +23,7 @@
     margin: 15px ;
     width: auto;
     display: flex;
+    flex-direction: column;
     align-items: center;
     justify-content: center;
     gap: 2vw;
@@ -31,7 +32,6 @@
 .avatar {
     width: 60px;
     border-radius: 50%;
-    margin-right: 25px;
     box-shadow: var(--border-shadow)
 }
 
@@ -74,7 +74,6 @@
 }
 
 .link-container {
-    margin-left: 20px;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -84,7 +83,6 @@
 .user-link {
     display: flex;
     align-items: center;
-    /* font-size: var(--normal-font-size); */
     font-size: 1.5rem;
 }
 
@@ -106,7 +104,6 @@
     }
 
     .user {
-        flex-direction: column;
         height: auto;
         gap: 10px;
     }
@@ -117,6 +114,7 @@
 
     .link-container{
         margin-left: 0;
+        margin-left: 20px;
     }
 
     .user-link{
