--- a/src/Pages/Pagestyle.css
+++ b/src/Pages/Pagestyle.css
@@ -24,7 +24,7 @@
 
 .card-container {
     margin: 0;
-    width: 100vw;
+    max-width: 100vw;
     display: flex;
     justify-content: center;
     text-align: center;
@@ -37,7 +37,6 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    height: 60vh;
     gap: 50px;
 }
 
